[package]
name = "multigroup"
version = "0.1.0"
authors = ["Michael Reilly <OmnipotentEntity@gmail.com>"]

[dependencies]
ndarray = { version = "0.10.12", features = ["blas"] }
blas-sys = { version = "0.6.9", default-features = false, features = ["openblas"] }
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.6"

